Differentiate between USER and STUDENT